--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,11 @@ section, summary, time, mark, audio, video {
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;}
+	display: block;
+	
+	
+}
+	
 
 body {
 	line-height: 1;
@@ -1864,8 +1868,8 @@ input, select, textarea {
 		transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
 		background-color: transparent;
 		border: 0;
-		box-shadow: inset 0 0 0 1px rgba(160, 160, 160, 0.3);
-		color: #3c3b3b !important;
+		box-shadow: inset 0 0 0 1px rgba(10, 10, 10, 0.3);
+		color: #0e0d0d !important;
 		cursor: pointer;
 		display: inline-block;
 		font-family: "Raleway", Helvetica, sans-serif;
@@ -1873,7 +1877,7 @@ input, select, textarea {
 		font-weight: 800;
 		height: 4.8125em;
 		letter-spacing: 0.25em;
-		line-height: 4.8125em;
+		line-height: 2.8125em;
 		padding: 0 2.5em;
 		text-align: center;
 		text-decoration: none;
@@ -1886,7 +1890,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #2ebaae;
+			box-shadow: inset 0 0 0 0px #2ebaae;
 			color: #2ebaae !important;
 		}
 
@@ -1907,7 +1911,7 @@ input, select, textarea {
 		button:after,
 		.button:before,
 		.button:after {
-			color: #aaaaaa;
+			color: #161515;
 			position: relative;
 		}
 
@@ -1964,7 +1968,7 @@ input, select, textarea {
 		.button.disabled,
 		.button:disabled {
 			pointer-events: none;
-			color: rgba(160, 160, 160, 0.3) !important;
+			color: rgba(22, 22, 22, 0.3) !important;
 		}
 
 			input[type="submit"].disabled:before, input[type="submit"]:disabled:before,
@@ -1976,7 +1980,7 @@ input, select, textarea {
 			button:disabled:before,
 			.button.disabled:before,
 			.button:disabled:before {
-				color: rgba(160, 160, 160, 0.3) !important;
+				color: rgba(24, 23, 23, 0.3) !important;
 			}
 
 /* Form */
@@ -2004,7 +2008,7 @@ input, select, textarea {
 			}
 
 			form.search:before {
-				color: #aaaaaa;
+				color: #0f0f0f;
 				content: '\f002';
 				display: block;
 				height: 2.75em;
@@ -2021,7 +2025,7 @@ input, select, textarea {
 			}
 
 	label {
-		color: #3c3b3b;
+		color: #080808;
 		display: block;
 		font-size: 0.9em;
 		font-weight: 700;
@@ -2038,9 +2042,9 @@ input, select, textarea {
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: rgba(160, 160, 160, 0.075);
+		background: rgba(14, 13, 13, 0.075);
 		border: none;
-		border: solid 1px rgba(160, 160, 160, 0.3);
+		border: solid 1px rgba(20, 20, 20, 0.3);
 		border-radius: 0;
 		color: inherit;
 		display: block;
@@ -2089,7 +2093,7 @@ input, select, textarea {
 		}
 
 		.select-wrapper:before {
-			color: rgba(160, 160, 160, 0.3);
+			color: rgba(15, 15, 15, 0.3);
 			content: '\f078';
 			display: block;
 			height: 2.75em;
@@ -2117,7 +2121,7 @@ input, select, textarea {
 	}
 
 		select option {
-			color: #3c3b3b;
+			color: #080808;
 			background: #ffffff;
 		}
 
@@ -2157,7 +2161,7 @@ input, select, textarea {
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #646464;
+			color: #0a0a0a;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2183,8 +2187,8 @@ input, select, textarea {
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				background: rgba(160, 160, 160, 0.075);
-				border: solid 1px rgba(160, 160, 160, 0.3);
+				background: rgba(14, 13, 13, 0.075);
+				border: solid 1px rgba(8, 8, 8, 0.3);
 				content: '';
 				display: inline-block;
 				font-size: 0.8em;
@@ -2590,6 +2594,7 @@ input, select, textarea {
 				}
 
 			ul.posts article header {
+				
 				-moz-flex-grow: 1;
 				-webkit-flex-grow: 1;
 				-ms-flex-grow: 1;
@@ -2598,11 +2603,18 @@ input, select, textarea {
 			}
 
 				ul.posts article header h3 {
+					
 					font-size: 0.7em;
 					margin-top: 0.125em;
 				}
-
+				header h1{
+					color:white;
+				}
+				ul.subtitulos {
+					color:white;
+				}
 				ul.posts article header .published {
+					
 					display: block;
 					font-family: "Raleway", Helvetica, sans-serif;
 					font-size: 0.6em;
@@ -2613,7 +2625,9 @@ input, select, textarea {
 				}
 
 				ul.posts article header > :last-child {
+					background-color: #0e0d0d;
 					margin-bottom: 0;
+					
 				}
 
 /* Mini Post */
@@ -3106,7 +3120,7 @@ input, select, textarea {
 	body {
 		padding-top: 3.5em;
 	}
-
+	
 	#header {
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -3603,3 +3617,9 @@ input, select, textarea {
 			}
 
 		}
+
+		/*Footer*/
+		section.final{
+			background-color: black;
+		  }
+		
