--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,111 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
+@import "compass/css3";
 
+.flexsearch--wrapper {
+    height: auto;
+    width: auto;
+    max-width: 20%;
+    overflow: hidden;
+    background: transparent;
+    margin: 0;
+    position: static;
+  }
+    
+  .flexsearch--form {
+    overflow: hidden;
+    position: relative;
+  }
+    
+  .flexsearch--input-wrapper {
+    padding: 0 66px 0 0; /* Right padding for submit button width */
+    overflow: hidden;
+  }
+  
+  .flexsearch--input {
+    width: 100%;
+  }
+  
+  /***********************
+   * Configurable Styles *
+   ***********************/
+  .flexsearch {
+    padding: 0 25px 0 200px; /* Padding for other horizontal elements */
+  }
+  
+  .flexsearch--input {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+     height: 60px;
+    padding: 0 46px 0 10px;
+    border-color: #888;
+    border-radius: 35px; /* (height/2) + border-width */
+    border-style: solid;
+    border-width: 5px;
+    margin-top: 15px;
+    color: #333;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 26px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+    
+  .flexsearch--submit {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    width: 60px;
+    height: 60px;
+    padding: 0;
+    border: none;
+    margin-top: 20px; /* margin-top + border-width */
+    margin-right: 5px; /* border-width */
+    background: transparent;
+    color: #888;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 40px;
+    line-height: 60px;
+  }
+  
+  .flexsearch--input:focus {
+    outline: none;
+    border-color: #333;
+  }
+  
+  .flexsearch--input:focus.flexsearch--submit {
+     color: #333; 
+  }
+  
+  .flexsearch--submit:hover {
+    color: #333;
+    cursor: pointer;
+  }
+  
+  ::-webkit-input-placeholder {
+    color: #888;  
+  }
+  
+  input:-moz-placeholder {
+    color: #888
+  }
+  
+  
+  /****************
+   * Pretify demo *
+   ****************/
+  .h1 {
+    float: left;
+    margin: 25px;
+    color: #333;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 45px;
+    font-weight: bold;
+    line-height: 45px;
+    text-align: center;
+  }
+ 
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -2627,7 +2732,6 @@ input, select, textarea {
 				}
 
 				ul.posts article header > :last-child {
-					background-color: #0e0d0d;
 					margin-bottom: 0;
 					
 				}
@@ -3136,10 +3240,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		-moz-justify-content: space-between;
-		-webkit-justify-content: space-between;
-		-ms-justify-content: space-between;
-		justify-content: space-between;
+	
 		background-color: #ffffff;
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 		height: 3.5em;
@@ -3179,39 +3280,23 @@ input, select, textarea {
 			}
 
 		#header .links {
-			-moz-flex: 1;
-			-webkit-flex: 1;
-			-ms-flex: 1;
+			
 			flex: 1;
-			border-left: solid 1px rgba(160, 160, 160, 0.3);
 			height: inherit;
-			line-height: inherit;
-			margin-left: 1.5em;
+			margin-left: 0.5em;
 			overflow: hidden;
-			padding-left: 1.5em;
+			padding-left: 0.5em;
+			padding-right: 1.5em;
 		}
 
 			#header .links ul li {
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
-				line-height: 1;
 				margin-left: 1em;
 				padding-left: 1em;
 			}
 
-				#header .links ul li:first-child {
-					border-left: 0;
-					margin-left: 0;
-					padding-left: 0;
-				}
 
-				#header .links ul li a {
-					border-bottom: 0;
-					font-family: "Raleway", Helvetica, sans-serif;
-					font-size: 0.7em;
-					font-weight: 400;
-					letter-spacing: 0.25em;
-					text-transform: uppercase;
-				}
+				
 
 		#header .main {
 			height: inherit;
@@ -3634,4 +3719,4 @@ input, select, textarea {
 			background-color: #789dca;
 		
 		  }
-		
+		  
