--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,14 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
 @import "compass/css3";
-
+a:hover.sobre{
+	color:#fff;
+	background-color: blue;
+	padding: 10px;
+	margin: 50px;
+	border: 3px solid green;
+	font-family:impact;
+  }
 .flexsearch--wrapper {
     height: auto;
     width: auto;
