--- a/assets/css/CSS.css
+++ b/assets/css/CSS.css
@@ -1,53 +1,60 @@
 * {
     box-sizing: border-box;
     font-family: sans-serif;
-  }
-  .login {
-    width: 300px;
-    height: 450px;
+}
+
+.login {
+    width: 500px;
+    height: 500px;
     border: 1px solid #CCC;
-    background: url(http://68.media.tumblr.com/2b27908fac782ca54cc2b3aff6862423/tumblr_mra3owkIhC1ro855no1_500.gif) center center no-repeat ;
+    background-color: #578fe2;
     opacity: 0.8;
     background-size: cover;
     margin: 30px auto;
     border-radius: 3px;
-  }
-  .login .form {
+}
+
+.login .form {
     width: 100%;
     height: 100%;
-    padding: 15px 20px;;
-  }
-  .login .form h2 {
+    padding: 15px 20px;
+    ;
+}
+
+.login .form h2 {
     color: rgb(248, 246, 246);
     text-align: center;
     font-weight: normal;
     font-size: 18px;
     margin-top: 60px;
     margin-bottom: 80px;
-  }
-  .login .form input {
+}
+
+.login .form input {
     width: 100%;
     height: 40px;
     margin-top: 20px;
-    background: rgba(134, 133, 133, 0.5);
-    border: 1px solid rgba(255,255,255,.1);
+    background: rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(255, 255, 255, .1);
     padding: 0 15px;
-    color: rgb(34, 33, 33);
+    color: rgb(0, 0, 0);
     border-radius: 2px;
     font-size: 14px;
-  }
-  .login .form input:focus {
+}
+
+.login .form input:focus {
     border: 1px solid rgba(228, 224, 224, 0.8);
     outline: none;
-  }
-  ::-webkit-input-placeholder {
-      color: rgb(223, 217, 217);
-  }
-  .login .form input.submit {
+}
+
+ ::-webkit-input-placeholder {
+    color: rgb(223, 217, 217);
+}
+
+.login .form input.submit {
     background: rgba(240, 235, 235, 0.9);
     color: #444;
     font-size: 15px;
     margin-top: 40px;
     font-weight: bold;
-  }
-
+}
